--- a/webapp/index.html
+++ b/webapp/index.html
@@ -14,11 +14,12 @@
     <header>
         <nav>
             <ol>
-                <li><p>Super salon usługowy</p></li>
-                <li><div class="button">OFERTA</div></li>
-                <li><div class="button">ZESPÓŁ</div></li>
+                <li><p><a ng-href="/index.html">Super salon usługowy </a></p></li>
+                <li><div class="button"><a ng-href="/view/serviceChoice.html">OFERTA </a></div></li>
+                <li><div class="button"><a ng-href="/view/employee.html">ZESPÓŁ </a></div></li>
                 <li><div class="button"><a ng-href="/view/about.html">O NAS </a></div></li>
-                <li><div class="button">OPINIE</div></li>
+                <li><div class="button"><a ng-href="/view/reviewShowAll.html">OPINIE
+                </a></div></li>
             </ol>
 <!-- todo            zmienic na twoje konto-->
             <a ng-href="/view/login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
