--- a/webapp/serviceDate.html
+++ b/webapp/serviceDate.html
@@ -2,15 +2,12 @@
 <html ng-app="mainApp">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="../css/Style.css" />
-    <script type="text/javascript" src="../js/lib/angular/angular.js"></script>
-    <script type="text/javascript" src="../js/lib/angular-route/angular-route.js"></script>
-    <script type="text/javascript" src="../js/controller.js"></script>
-    <script type="text/javascript" src="../js/route.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/Style.css" />
+    <script src="js/lib/angular/angular.js"></script>
+    <script src="js/lib/angular-route/angular-route.js"></script>
+    <script src="js/loginController.js"></script>
+    <script src="js/app.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-      <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script type="text/javascript" src="/js//datepicker.js"></script>
     <script>
         $(document).ready(function(){
             $('#datepicker').datepicker();
@@ -25,21 +22,21 @@
             $('#datepicker').datepicker('show');
             });
     </script>
-    <title>Home</title>    
+    <title>Date service</title>
 </head>
-<body ng-controller="loginCtrl">
+<body>
     <header>
         <nav>
              <ol>
-                <li><p><a href="../index.html">Super salon usługowy </a></p></li>
+                <li><p><a href="index.html">Super salon usługowy </a></p></li>
                 <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
                 <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
-                <li><div class="button"><a href="about.html">O NAS </a></div></li>
+                <li><div class="button"><a href="info.html">O NAS </a></div></li>
                 <li><div class="button"><a href="reviewShowAll.html">OPINIE
                 </a></div></li>
             </ol>
 <!-- todo            zmienic na twoje konto-->
-            <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="../img/user2.png" height="35px"></div></a>
+            <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
             <div style="clear: both"> </div>
         </nav>
     </header>
