--- a/webapp/login.html
+++ b/webapp/login.html
@@ -2,27 +2,26 @@
 <html ng-app="mainApp">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="../css/Style.css" />
-    <script type="text/javascript" src="../js/lib/angular/angular.js"></script>
-    <script type="text/javascript" src="../js/lib/angular-route/angular-route.js"></script>
-    <script type="text/javascript" src="../js/controller.js"></script>
-    <script type="text/javascript" src="../js/route.js"></script>
-
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css/Style.css" />
+    <script src="js/lib/angular/angular.js"></script>
+    <script src="js/lib/angular-route/angular-route.js"></script>
+    <script src="js/loginController.js"></script>
+    <script src="js/app.js"></script>
+    <title>Login page</title>
 </head>
-<body ng-controller="loginCtrl">
+<body ng-app="mainApp" ng-controller="loginCtrl">
     <header>
         <nav>
              <ol>
-                <li><p><a href="../index.html">Super salon usługowy </a></p></li>
+                <li><p><a href="index.html">Super salon usługowy </a></p></li>
                 <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
                 <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
-                <li><div class="button"><a href="about.html">O NAS </a></div></li>
+                <li><div class="button"><a href="info.html">O NAS </a></div></li>
                 <li><div class="button"><a href="reviewShowAll.html">OPINIE
                 </a></div></li>
             </ol>
 <!-- todo            zmienic na twoje konto-->
-            <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="../img/user2.png" height="35px"></div></a>
+            <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
             <div style="clear: both"> </div>
         </nav>
     </header>
@@ -42,7 +41,7 @@
         </div>
         <div class="register">
             <span>Zaloz konto w 10 sekund i<br/> zyskaj rabat 5% na nasze uslugi</span>
-            <a ng-href="register.html" class="myButton">Utwórz konto !</a>
+            <a href="register.html" class="myButton">Utwórz konto !</a>
         </div>
     </main>
     <footer class="loginFooter"><br/>
