--- a/webapp/register_succes.html
+++ b/webapp/register_succes.html
@@ -2,33 +2,32 @@
 <html ng-app="mainApp">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="../css/Style.css" />
-    <script type="text/javascript" src="../js/lib/angular/angular.js"></script>
-    <script type="text/javascript" src="../js/lib/angular-route/angular-route.js"></script>
-    <script type="text/javascript" src="../js/controller.js"></script>
-    <script type="text/javascript" src="../js/route.js"></script>
-
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css/Style.css" />
+    <script src="js/lib/angular/angular.js"></script>
+    <script src="js/lib/angular-route/angular-route.js"></script>
+    <script src="js/loginController.js"></script>
+    <script src="js/app.js"></script>
+    <title>Succes</title>
 </head>
 <body>
     <header>
         <nav>
-             <ol>
-                <li><p><a href="../index.html">Super salon usługowy </a></p></li>
+            <ol>
+                <li><p><a href="index.html">Super salon usługowy </a></p></li>
                 <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
                 <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
-                <li><div class="button"><a href="about.html">O NAS </a></div></li>
+                <li><div class="button"><a href="info.html">O NAS </a></div></li>
                 <li><div class="button"><a href="reviewShowAll.html">OPINIE
                 </a></div></li>
             </ol>
 <!--            zmienic na twoje konto-->
-            <a href="/view/login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="../img/user2.png" height="35px"></div></a>
+            <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
             <div style="clear: both"> </div>
         </nav>
     </header>
     <main class="registerSucces">
-            <span>Usługa Utworzona !</span>
-            <p> Zamówiłeś usługę, czekamy na ciebie ;) </p>
+            <span>Konto Utworzone !</span>
+            <p> Na adres e-mail został wysłany link do aktywacji konta </p>
             <br/><br/>
     </main>
         <center>
