--- a/webapp/reviewShowAll.html
+++ b/webapp/reviewShowAll.html
@@ -2,30 +2,32 @@
 <html ng-app="mainApp">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="../css/Style.css" />
-    <script type="text/javascript" src="../js/lib/angular/angular.js"></script>
-    <script type="text/javascript" src="../js/lib/angular-route/angular-route.js"></script>
-    <script type="text/javascript" src="../js/controller.js"></script>
-    <script type="text/javascript" src="../js/route.js"></script>
-
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="css/Style.css" />
+    <script src="js/lib/angular/angular.js"></script>
+    <script src="js/lib/angular-route/angular-route.js"></script>
+    <script src="js/loginController.js"></script>
+    <script src="js/app.js"></script>
+    <title>Reviews</title>
 </head>
 <body>
     <header>
         <nav>
              <ol>
-                <li><p><a href="../index.html">Super salon usługowy </a></p></li>
+                <li><p><a href="index.html">Super salon usługowy </a></p></li>
                 <li><div class="button"><a href="serviceChoice.html">OFERTA </a></div></li>
                 <li><div class="button"><a href="employee.html">ZESPÓŁ </a></div></li>
-                <li><div class="button"><a href="about.html">O NAS </a></div></li>
+                <li><div class="button"><a href="info.html">O NAS </a></div></li>
                 <li><div class="button"><a href="reviewShowAll.html">OPINIE
                 </a></div></li>
             </ol>
 <!--            zmienic na twoje konto-->
-            <a href="/view/login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="../img/user2.png" height="35px"></div></a>
+            <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
             <div style="clear: both"> </div>
         </nav>
     </header>
+    <div class="employeeInfo">
+             <span>Wybierz pracownika aby przeczytać opinię !</span>
+        </div>
     <main class="employee">
          Wizyty oczekujące i ostatnie 
          <table>
@@ -40,9 +42,17 @@
              <tr>
                 <th>{{Number}}</th>
                 <th>{{Data}}</th>
-                <th>{Status: Status Status</th>
-                <th>{Typ usługi}</th>
-                <th>{{Ocena}</th>
+                <th>{{Status Status Status}}</th>
+                <th>{{Typ usługi}}</th>
+                <th>{{Ocena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+            </tr>
+             <tr>
+                <th>{{Number}}</th>
+                <th>{{Data}}</th>
+                <th>{{Status Status Status}}</th>
+                <th>{{Typ usługi}}</th>
+                <th>{{Ocena}}</th>
                  <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
             </tr>
         </table>
