--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,7 +7,6 @@
     <script src="js/lib/angular-route/angular-route.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
-
     <title>Home</title>
 </head>
 <body ng-app="mainApp">
@@ -26,6 +25,7 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
+    {{2+3}} {{errormsg}}
     <main class="registerSucces">
         <span>Najlepszy salon usługowy</span>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
