--- a/webapp/login.html
+++ b/webapp/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="mainApp">
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/Style.css" />
@@ -9,7 +9,7 @@
     <script src="js/app.js"></script>
     <title>Login page</title>
 </head>
-<body ng-app="mainApp" ng-controller="loginCtrl">
+<body ng-app="mainApp">
     <header>
         <nav>
              <ol>
@@ -25,8 +25,8 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <h1 style="text-align: center">{{errormsg}}</h1>
-    <main class="loginMain">
+    <h1 style="text-align: center">{{}}</h1>
+    <main class="loginMain" ng-controller="loginCtrl">
         <div class="login">
             <div class="loginform">
                 <form action="/" id="myLogin">
