--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/Style.css" />
     <script src="js/lib/angular/angular.js"></script>
+    <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
@@ -25,7 +26,6 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    {{2+3}} {{errormsg}}
     <main class="registerSucces">
         <span>Najlepszy salon usługowy</span>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
