--- a/webapp/reviewRead.html
+++ b/webapp/reviewRead.html
@@ -4,9 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/Style.css" />
     <script src="js/lib/angular/angular.js"></script>
-    <script src="js/lib/angular-route/angular-route.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/lib/angular-cookies/angular-cookies.js"></script>
+    <script src="js/lib/angular-route/angular-route.js"></script>
     <title>Reviews</title>
 </head>
 <body>
@@ -20,8 +21,9 @@
                 <li><div class="button"><a href="reviewShowAll.html">OPINIE
                 </a></div></li>
             </ol>
-<!--            zmienic na twoje konto-->
-            <a href="login.html"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
+            <a href="login.html" ng-if="getCookie('username').length < 2"><div class="userFrame"><span>Zaloguj Się</span><img src="img/user2.png" height="35px"></div></a>
+            <a href="index.html" ng-if="getCookie('username').length > 1" ng-click="removeCookies()"><div class="userFrame"><span>Wyloguj Się</span><img src="img/logout.png" height="35px"></div></a>
+
             <div style="clear: both"> </div>
         </nav>
     </header>
