--- a/webapp/serviceDate.html
+++ b/webapp/serviceDate.html
@@ -8,8 +8,9 @@
     <script src="js/app.js"></script>
     <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
         $(document).ready(function(){
             $('#datepicker').datepicker();
 
@@ -109,56 +110,7 @@ Jakas tam usluga2
                 <th>{{Typ usługi}}</th>
                 <th>{{Ocena}}</th>
                  <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
-            </tr>
-                <tr>
-                <th>{{Number}}</th>
-                <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
-                <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
-            </tr>
-                <tr>
-                <th>{{Number}}</th>
-                <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
-                <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
-            </tr>
-                <tr>
-                <th>{{Number}}</th>
-                <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
-                <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
-            </tr>
-                <tr>
-                <th>{{Number}}</th>
-                <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
-                <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
-            </tr>
-                <tr>
-                <th>{{Number}}</th>
-                <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
-                <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
-            </tr>
-                <tr>
-                <th>{{Number}}</th>
-                <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
-                <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
-            </tr>
-                
+                </tr>
         </table>
         </div>
     </main>
