--- a/webapp/register_succes.html
+++ b/webapp/register_succes.html
@@ -34,7 +34,7 @@
     </main>
         <center>
             <div class="content">
-                <a ng-href="login.html" class="myButton">Powrót !</a>
+                <a ng-href="index.html" class="myButton">Powrót !</a>
             </div>
         </center>
 
