--- a/webapp/serviceChoice.html
+++ b/webapp/serviceChoice.html
@@ -6,6 +6,7 @@
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/servicesController.js"></script>
     <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
     <title>Service choice</title>
@@ -26,24 +27,16 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <main class="services">
+    <main class="services" ng-controller="servicesController as service">
         <table>
             <tr>
-                <th>
-                    <div class="image">image</div>
+                <th ng-repeat="s in service.services">
+                    <div class="image"><img src="img/service1.jpeg" width="225px" height="125px"></div>
                     <div class="desc">
-                        <h2 style="text-align: center;">Nazwa usługi</h2><br/>
-                        <span>Czas : x minut</span><br/>
-                        <span>Koszt: x zł</span>
+                        <h2 style="text-align: center;">{{s.name}}</h2><br/>
+                        <span>Czas : {{s.duration}} minut</span><br/>
+                        <span>Koszt: {{s.price}} zł</span>
                     <a ng-href="login.html" class="myButton"> Rezerwuj</a></div>
-                </th>
-                <th>
-                    <div class="image">image</div>
-                    <div class="desc">desc</div>
-                </th>
-                <th>
-                    <div class="image">image</div>
-                    <div class="desc">desc</div>
                 </th>
             </tr>
             
