--- a/webapp/serviceDate.html
+++ b/webapp/serviceDate.html
@@ -58,58 +58,58 @@ Jakas tam usluga2
             <tr>
                 <th>Number</th>
                 <th>Data</th>
-                <th>Status</th>
+                <th>Pracownik</th>
                 <th>Typ usługi</th>
-                <th>Ocena</th>
+                <th>Cena</th>
                 <th><p>########</p></th>
             </tr>
              <tr>
                 <th>{{Number}}</th>
                 <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
+                <th>{{Pracownik }}</th>
                 <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+                <th>{{Cena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Rezerwuj</a></th>
             </tr>
                 <tr>
                 <th>{{Number}}</th>
                 <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
+                <th>{{Pracownik  Pracownik}}</th>
                 <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+                <th>{{Cena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Rezerwuj</a></th>
             </tr>
                 <tr>
                 <th>{{Number}}</th>
                 <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
+                <th>{{Pracownik Pracownik }}</th>
                 <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+                <th>{{Cena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Rezerwuj</a></th>
             </tr>
                 <tr>
                 <th>{{Number}}</th>
                 <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
+                <th>{{Pracownik Pracownik Pracownik}}</th>
                 <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+                <th>{{Cena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Rezerwuj</a></th>
             </tr>
                 <tr>
                 <th>{{Number}}</th>
                 <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
+                <th>{{Pracownik Pracownik Pracownik}}</th>
                 <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+                <th>{{Cena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Rezerwuj</a></th>
             </tr>
                 <tr>
                 <th>{{Number}}</th>
                 <th>{{Data}}</th>
-                <th>{{Status Status Status}}</th>
+                <th>{{Pracownik Pracownik Pracownik}}</th>
                 <th>{{Typ usługi}}</th>
-                <th>{{Ocena}}</th>
-                 <th><a ng-href="login.html" class="myButton">Przeczytaj opinie</a></th>
+                <th>{{Cena}}</th>
+                 <th><a ng-href="login.html" class="myButton">Rezerwuj</a></th>
                 </tr>
         </table>
         </div>
