fixed small bugs

--- a/webapp/reviewShowAll.html
+++ b/webapp/reviewShowAll.html
@@ -28,11 +28,9 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-<!--    <div class="employeeInfo">-->
-<!--             <span>Wybierz pracownika aby przeczytać opinię !</span>-->
-<!--        </div>-->
     <main class="employee" ng-controller="reviewsController as review">
-         Wizyty oczekujące i ostatnie 
+        Opinie o ostatnich wizytach
+<!--        todo filtr dla usera-->
          <table>
              <thead>
              <tr>
