--- a/webapp/serviceChange.html
+++ b/webapp/serviceChange.html
@@ -29,6 +29,7 @@
         </nav>
     </header>
     <main class="serviceChange" ng-controller="workDatesInfo as date">
+<!--  todo      wrzucic putem do bazy-->
         <div class="summary">
             <p style="font-size: 1.8rem">Podsumowanie</p>
             <p>Usługa: <span>{{date.serviceName}}</span></p>
