--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,11 +6,12 @@
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/loginController.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/reservationsController.js"></script>
     <script src="js/lib/angular-cookies/angular-cookies.js"></script>
     <script src="js/lib/angular-route/angular-route.js"></script>
     <title>Home</title>
 </head>
-<body ng-app="mainApp">
+<body ng-controller="reservationsController as rez">
     <header>
         <nav>
             <ol>
@@ -27,11 +28,59 @@
             <div style="clear: both"> </div>
         </nav>
     </header>
-    <main class="registerSucces">
+    <main class="registerSucces" ng-if="rez.dataPresent == 0">
         <span>Najlepszy salon usługowy</span>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
             <br/><br/>
     </main>
+    <div class="userReservations" ng-if="rez.dataPresent == 1">
+        <center>
+            <h2> Twoje rezerwacje </h2>
+            <table>
+                <thead>
+                <tr>
+                    <th>Nazwa usługi</th>
+                    <th>Czas trwania</th>
+                    <th>Cena</th>
+                    <th>Data</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="r in rez.reservations" >
+                    <th>{{r.service.name}}</th>
+                    <th>{{r.service.duration}}</th>
+                    <th>{{r.service.price}}</th>
+                    <th><span ng-bind="r.workDate.date | date:'hh:mm dd.MM.yyyy'"> </span></th>
+                </tr>
+                </tbody>
+            </table>
+        </center>
+    </div>
+    <div class="userHistory" ng-if="rez.dataPresent == 1">
+        <center>
+            <h2> Historia twoich wizyt </h2>
+            <table>
+                <thead>
+                <tr>
+                    <th>Nazwa usługi</th>
+                    <th>Czas trwania</th>
+                    <th>Cena</th>
+                    <th>Data</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="r in rez.reservations" >
+                    <th>{{r.service.name}}</th>
+                    <th>{{r.service.duration}}</th>
+                    <th>{{r.service.price}}</th>
+                    <th><span ng-bind="r.workDate.date | date:'hh:mm dd.MM.yyyy'"> </span></th>
+                </tr>
+                </tbody>
+            </table>
+        </center>
+    </div>
+    <div style="clear: both"></div>
+
         <center>
             <div class="content">
                 <a  href="login.html" ng-if="getCookie('username').length < 2" class="myButton">Zaloguj się !</a>
